@@ -1,3 +1,9 @@
+# TODO: handle line-endings better.  Perhaps we should just look for an 
+# identifying part of each page rather than trying to do an exact match
+# of the entire page.  The problem is on win32, some responses come back with
+# dos-style line endings (not all of them though).  Not sure what MacOS does
+# and I don't have a Mac to test with.  Currently, we just strip CR's out of
+# responses to make the tests pass on Unix and Win32.
 
 use strict;
 use warnings FATAL => 'all';
@@ -37,31 +43,22 @@ ok test_21();
 
 sub test_3 {
     my $url = '/docs/index.html';
-    my $data = GET_BODY $url;
+    my $data = strip_cr(GET_BODY $url);
 
-    print "# data: $data";
     my $exp = get_expected('3');
-    if ($data eq $exp) {
-        return 1;
-    }
-    else { 
-        return 0;
-    }
+
+    return t_cmp($data, $exp, 'test 3');
 }
 
 sub test_4 {
     my $url = '/docs/protected/get_me.html';
     my $r = GET $url;
 
-    print "# CODE: ", $r->code, "\n";
-    print "# BODY: ", $r->content;
-
-    my $dat = $r->content;
+    my $dat = strip_cr($r->content);
 
     my $exp = get_expected('4');
-    print "expected: $exp, got: $dat\n";
 
-    return $dat eq $exp;
+    return t_cmp($dat, $exp, 'test 4');
 }
 
 # should succeed with redirect.
@@ -72,12 +69,7 @@ sub test_5 {
         credential_1 => 'Hero'
     ]);
 
-    unless ($r->code == 302) {
-        printf "# code: %d\n", $r->code;
-        return 0;
-    }
-
-    return 1;
+    return t_cmp($r->code, 302, 'test 5');
 }
 
 sub test_6 {
@@ -90,21 +82,18 @@ sub test_6 {
 
     my $exp = get_expected('6');
 
-    return $r->content eq $exp;
+    return t_cmp(strip_cr($r->content), $exp, 'test 6');
 }
 
 # should fail with no_cookie
 sub test_7 {
     my $url = '/docs/protected/get_me.html';
 
-    my $dat = GET_BODY($url);
+    my $dat = strip_cr(GET_BODY($url));
 
     my $exp = get_expected('7');
 
-    print "expected: $exp\n";
-    print "got: $dat\n";
-
-    return $dat eq $exp;
+    return t_cmp($dat, $exp, 'test 7');
 }
 
 # should have a Set-Cookie header that expired at epoch.
@@ -116,10 +105,7 @@ sub test_8 {
     my $data = $r->header('Set-Cookie');
     my $expected = 'Sample::AuthCookieHandler_WhatEver=; expires=Mon, 21-May-1971 00:00:00 GMT; path=/';
 
-    print "# expected: $data\n";
-    print "# got: $data\n";
-
-    return $data eq $expected;
+    return t_cmp($data, $expected, 'test 8');
 }
 
 sub test_9 {
@@ -130,7 +116,7 @@ sub test_9 {
 
     my $expected = get_expected('9');
 
-    return $data eq $expected;
+    return t_cmp(strip_cr($data), $expected, 'test 9');
 }
 
 # should fail
@@ -140,13 +126,7 @@ sub test_10 {
         Cookie => 'Sample::AuthCookieHandler_WhatEver=some-user:duck;'
     );
 
-    my $data = $r->code;
-    my $expected = '403';
-
-    print "# expected: $expected\n";
-    print "# got: $data\n";
-
-    return $data eq $expected;
+    return t_cmp($r->code, '403', '403 == 403?');
 }
 
 # Should redirect to /docs/protected/get_me.html
@@ -157,19 +137,13 @@ sub test_11 {
         credential_1 => 'Heroo'
     ]);
 
-    print "Location: ", $r->header('Location'), "\n",
-          "Set-Cookie: ", $r->header('Set-Cookie'), "\n",
-          "Code: ", $r->code, "\n";
-
     return 0 unless
        $r->header('Location') eq '/docs/protected/get_me.html';
 
     return 0 unless 
         $r->header('Set-Cookie') eq 'Sample::AuthCookieHandler_WhatEver=programmer:Heroo; path=/';
 
-    return 0 unless $r->code == 302;
-
-    return 1;
+    return t_cmp($r->code, 302, 'r->code == 302?');
 }
 
 # should get the login form back (bad_cookie).
@@ -181,10 +155,7 @@ sub test_12 {
 
     my $expected = get_expected('12');
 
-    print "# expected: $expected\n";
-    print "# got: $data\n";
-
-    return $data eq $expected;
+    return t_cmp(strip_cr($data), $expected, 'test 12');
 }
 
 # should get the login form back (bad_credentials)
@@ -195,13 +166,10 @@ sub test_13 {
         credential_1 => 'Hero'
     ]);
 
-    my $data = $r->content;
+    my $data = strip_cr($r->content);
     my $expected = get_expected('13');
 
-    print "# expected: $expected\n";
-    print "# got: $data\n";
-
-    return $data eq $expected;
+    return t_cmp($data, $expected, 'test 13');
 }
 
 # check that the destination is right.
@@ -212,18 +180,12 @@ sub test_14 {
         credential_1 => 'mypassword'
     ]);
 
-    print "Location: ", $r->header('Location'), "\n",
-          "Set-Cookie: ", $r->header('Set-Cookie'), "\n",
-          "Code: ", $r->code(), "\n";
-
     return 0 unless $r->header('Location') eq '/docs/authany/get_me.html';
 
     return 0 unless 
         $r->header('Set-Cookie') eq 'Sample::AuthCookieHandler_WhatEver=some-user:mypassword; path=/';
 
-    return 0 unless $r->code == 302;
-
-    return 1;
+    return t_cmp($r->code, 302, 'r->code == 302?');
 }
 
 # should fail because all requirements are not met
@@ -233,9 +195,7 @@ sub test_15 {
         Cookie => 'Sample::AuthCookieHandler_WhatEver=some-user:mypassword'
     );
 
-    print "code: ", $r->code(), "\n";
-
-    return ($r->code() == 403);
+    return t_cmp($r->code(), 403, 'r->code == 403?');
 }
 
 sub test_16 {
@@ -243,13 +203,10 @@ sub test_16 {
         foo => 'bar'
     ]);
 
-    my $data = $r->content;
+    my $data = strip_cr($r->content);
     my $expected = get_expected('16');
 
-    print "# expected: $expected\n";
-    print "# got: $data\n";
-
-    return $data eq $expected;
+    return t_cmp($data, $expected, 'test 16');
 }
 
 # same test at #16, but in GET mode. Should succeed
@@ -257,10 +214,7 @@ sub test_17 {
     my $data = GET_BODY('/docs/protected/get_me.html?foo=bar');
     my $expected = get_expected('17');
 
-    print "# expected: $expected\n";
-    print "# got: $data\n";
-
-    return $data eq $expected;
+    return t_cmp(strip_cr($data), $expected, 'test 17');
 }
 
 # should succeed (any requirement is met)
@@ -270,13 +224,10 @@ sub test_18 {
         Cookie => 'Sample::AuthCookieHandler_WhatEver=some-user:mypassword'
     );
 
-    my $data = $r->content;
+    my $data = strip_cr($r->content);
     my $expected = get_expected('18');
 
-    print "# expected: $expected\n";
-    print "# got: $data\n";
-
-    return $data eq $expected;
+    return t_cmp($data, $expected, 'test 18');
 }
 
 # should fail: AuthAny and NONE of the requirements are met.
@@ -286,9 +237,7 @@ sub test_19 {
         Cookie => 'Sample::AuthCookieHandler_WhatEver=nouser:mypassword'
     );
 
-    print "code: ", $r->code(), "\n";
-
-    return ($r->code() == 403);
+    return t_cmp($r->code, 403, 'r->code == 403?');
 }
 
 # Should succeed and cookie should have HttpOnly attribute
@@ -299,19 +248,13 @@ sub test_20 {
         credential_1 => 'Heroo'
     ]);
 
-    print "# Location: ", $r->header('Location'), "\n",
-          "# Set-Cookie: ", $r->header('Set-Cookie'), "\n",
-          "# Code: ", $r->code, "\n";
-
     return 0 unless
        $r->header('Location') eq '/docs/protected/get_me.html';
 
     return 0 unless 
         $r->header('Set-Cookie') eq 'Sample::AuthCookieHandler_WhatEver=programmer:Heroo; path=/; HttpOnly';
 
-    return 0 unless $r->code == 302;
-
-    return 1;
+    return t_cmp($r->code, 302, 'r->code == 302');
 }
 
 # test SessionTimeout
@@ -321,13 +264,9 @@ sub test_21 {
         Cookie => 'Sample::AuthCookieHandler_WhatEver=programmer:Hero'
     );
 
-    # print STDERR "# Cookie", $r->header('Set-Cookie');
-
-    return 0 unless
-        $r->header('Set-Cookie') =~
-            /^Sample::AuthCookieHandler_WhatEver=.*expires=.+/;
-
-    return 1;
+    return t_cmp($r->header('Set-Cookie'),
+                 qr/^Sample::AuthCookieHandler_WhatEver=.*expires=.+/,
+                 'Set-Cookie contains expires property?');
 }
 
 # get the "expected output" file for a given test and return its contents.
@@ -339,6 +278,16 @@ sub get_expected {
     my $data = <EXPFH>;
     close EXPFH;
 
+    return $data;
+}
+
+# remove CR's from a string.  Win32 apache apparently does line ending
+# conversion, and that can cause test cases to fail because output does not
+# match expected because expected has UNIX line endings, and OUTPUT has dos
+# style line endings.
+sub strip_cr {
+    my $data = shift;
+    $data =~ s/\r//gs;
     return $data;
 }
 
